# rigel

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
AI_context/: backport_plan.md  current_state.md  dma_slot_timing.md  ecs_support.md  endianness.md  ks31_support.md  next_steps.md  temporal_bus_api.md  video_output.md
docs/: agnus.md  api_status.md  architecture.md  denise.md  integration.md  irq_model.md  memory_map.md  pending.md  timing_model.md  video_output.md
harness/: harness.c  harness.h
harness/tests/: test_blitter_stall.c  test_blitter_timing.c  test_endian.c
include/riegel/: riegel.h  riegel_config.h  riegel_custom.h  riegel_events.h  riegel_irq.h  riegel_mmio.h  riegel_snapshot.h  riegel_types.h
include/rigel/: rigel.h  rigel_audio.h  rigel_beam.h  rigel_bus.h  rigel_cia.h  rigel_config.h  rigel_custom.h  rigel_denise.h  rigel_denise_debug.h  rigel_denise_types.h  rigel_denise_video.h  rigel_events.h  rigel_floppy.h  rigel_input.h  rigel_irq.h  rigel_keyboard.h  rigel_mmio.h  rigel_rtc.h  rigel_serial.h  rigel_snapshot.h  rigel_time.h  rigel_types.h
src/agnus/: agnus.c  agnus.h  agnus_regs.c  agnus_regs.h  agnus_state.c  agnus_state.h  beam.c  beam.h  bitplanes.h  blitter.c  blitter.h  copper.c  dma.c  dma.h
src/agnus/blitter/: blitter.h  blitter_debug.c  blitter_dma.c  blitter_ref.c  blitter_regs.c  blitter_timing.c  blitter_types.h
src/bus/: chip_ram_if.c  chip_ram_if.h  riegel_bus.c  riegel_bus.h  rigel_bus.c  rigel_bus.h
src/chipset/: chipset.c  chipset.h  chipset_dma.h  chipset_events.h
src/chipset/agnus/: agnus.c  agnus.h  agnus_config.h  agnus_internal.h  agnus_regs.c  agnus_state.c  agnus_state.h  beam.c  beam.h  bitplanes.c  blitter.c  blitter.h  copper.h  dma.c  dma.h
src/chipset/agnus/bitplanes/: bitplane_fetch.c  bitplane_fetch.h  bitplane_pointers.c  bitplane_pointers.h  bitplanes.c  bitplanes.h  display_window.c  display_window.h
src/chipset/agnus/blitter/: blitter.h  blitter_command.c  blitter_debug.c  blitter_dma.c  blitter_fill.c  blitter_fill.h  blitter_line.c  blitter_line.h  blitter_logic.c  blitter_logic.h  blitter_ref.c  blitter_regs.c  blitter_timing.c  blitter_types.h
src/chipset/agnus/bus/: chip_bus.c  chip_bus.h
src/chipset/agnus/copper/: copper.c  copper.h  copper_exec.c  copper_exec.h  copper_regs.c  copper_regs.h  copper_service.c  copper_service.h  copper_wait.c  copper_wait.h
src/chipset/agnus/debug/: agnus_dump.c  agnus_dump.h  agnus_trace.c  agnus_trace.h
src/chipset/agnus/dma/: dma.c  dma.h  dmacon.h  refresh_dma.c  refresh_dma.h  sprite_dma.c  sprite_dma.h
src/chipset/agnus/irq/: agnus_irq.c  agnus_irq.h
src/chipset/agnus/mmio/: agnus_mmio.c  agnus_mmio.h  agnus_read.c  agnus_regs.h  agnus_write.c
src/chipset/agnus/timing/: beam.c  beam.h  deadline.c  deadline.h  raster.c  raster.h  slot_scheduler.c  slot_scheduler.h  vblank.c  vblank.h
src/chipset/denise/: color.h  denise.c  denise.h  denise_internal.h  denise_regs.c  denise_state.h  sprites.c  sprites.h  video.h
src/chipset/denise/debug/: denise_trace.c  denise_trace.h  dumps.c  dumps.h  overlays.c  overlays.h
src/chipset/denise/output/: framebuffer.c  framebuffer.h  planar.c  planar.h  rgb.c  rgb.h  scanline.c  scanline.h
src/chipset/denise/palette/: color_regs.c  color_regs.h  palette.c  palette.h
src/chipset/denise/registers/: denise_registers.c  denise_registers.h
src/chipset/denise/render/: compositor.c  compositor.h  dualpf.c  dualpf.h  ehb.c  ehb.h  ham.c  ham.h  pixel_pipeline.c  pixel_pipeline.h  playfield.c  playfield.h  priority.c  priority.h
src/chipset/denise/sprites/: collisions.c  collisions.h  sprite_attach.c  sprite_dma.c  sprites.c  sprites.h  sprites_core.c  sprites_core.h
src/chipset/denise/video/: beam.c  (+7 more)
src/chipset/paula/: audio.c  audio.h  disk.c  disk.h  input.c  input.h  paula.c  paula.h  paula_interrupts.c  paula_interrupts.h  paula_regs.c  paula_regs.h  paula_state.c  paula_state.h  serial.c  serial.h
src/cia/: cia.c  cia.h  cia_interrupt.c  cia_interrupt.h  cia_ports.c  cia_ports.h  cia_serial.c  cia_serial.h  cia_timer.c  cia_timer.h  cia_timers.c  cia_timers.h  cia_tod.c  cia_tod.h
src/core/: riegel.c  riegel_context.c  riegel_context.h  riegel_timing.c  riegel_timing.h  rigel.c  rigel_audio_api.c  rigel_beam_api.c  rigel_cia_api.c  rigel_context.c  rigel_context.h  rigel_denise_api.c  rigel_serial_api.c  rigel_timing.c  rigel_timing.h
src/debug/: core_log.h  log.c  log.h  trace.c  trace.h
src/denise/: color.c  color.h  denise.c  denise.h  denise_regs.c  denise_regs.h  video.c
src/domains/audio/: audio_domain.c  audio_domain.h
src/domains/beam/: beam_domain.c  beam_domain.h
src/domains/blitter/: blitter_domain.c  blitter_domain.h
src/domains/copper/: copper_domain.c  copper_domain.h
src/domains/disk/: disk_domain.c  disk_domain.h
src/domains/dma/: dma_domain.c  dma_domain.h
src/domains/input/: input_domain.c  input_domain.h
src/domains/interrupt/: interrupt_domain.c  interrupt_domain.h
src/domains/serial/: serial_domain.c  serial_domain.h
src/floppy/: floppy_drive.c  floppy_drive.h  floppy_mfm.c  floppy_mfm.h
src/irq/: intena.c  intena.h  intreq.c  intreq.h  riegel_irq.c  rigel_irq.c
src/mmio/: custom_regs.c  custom_regs.h  riegel_mmio.c  rigel_mmio.c
src/paula/: audio.c  audio.h  disk.c  disk.h  paula.c  paula.h  paula_interrupts.c  paula_interrupts.h  paula_regs.c  paula_regs.h  paula_state.c  paula_state.h  serial.c  serial.h
src/rtc/: rtc.c  rtc.h
src/runtime/: riegel_runtime.c  riegel_runtime.h  rigel_runtime.c  rigel_runtime.h  single_thread.c  single_thread.h
src/simd/: rigel_simd.c  rigel_simd.h
src/util/: log.c  log.h  trace.c  trace.h
tests/: check_no_stdio.cmake  test_agnus_domains.c  test_audio.c  test_baremetal_log.c  test_beam.c  test_blitter.c  test_blitter_channel_cost.c  test_blitter_dma.c  test_chipset.c  test_cia.c  test_copper.c  test_custom_map.c  test_denise.c  test_floppy.c  test_input.c  test_irq.c  test_mfm_decode.c  test_mmio.c  test_paula.c  test_rtc.c  test_serial.c  test_simd.c  test_timing.c  test_video_modes.c
(+4 files in other folders)
